# cardano-insights

./: .gitignore  .user.yml  CLOUD_ARCHITECTURE.md  Makefile  PROJECT_SUMMARY.md  README.md  catalyst_ecosystem_summary.json  export_to_s3.sql  main.py  profiles.yml  profiles_tech_intel.yml  pyproject.toml  tech_intel.duckdb;  test_lido_extraction.py
.github/workflows/: dbt-dev.yml  docker-build.yml  terraform-apply.yml
analytics/dbt_catalyst/: dbt_project.yml  package-lock.yml
analytics/dbt_catalyst/models/: schema.yml  sources.yml
analytics/dbt_github/: dbt_project.yml
analytics/dbt_github/models/: sources.yml
analytics/dbt_shared/: dbt_project.yml
analytics/dbt_shared/macros/: util.sql
infra/: README.md  main.tf  outputs.tf  providers.tf  variables.tf
load/common/: __init__.py  utils.py
load/fund_results/: pipeline.py  requirements.txt
load/github/: Dockerfile  pipeline.py  requirements.txt  settings.py  state.py
load/lido/: Dockerfile  pipeline.py  requirements.txt  settings.py
models/: sources.yml
models/bronze/: stg_funds.sql  stg_proposals.sql
scripts/: check_status.py  extract_all.py  merge_duckdb.sql  run_local_lido.py
tests/: __init__.py  conftest.py  test_basic.py
tests/connectors/: __init__.py  test_github.py  test_lido.py
transform/: Dockerfile  catalyst_graph_transform.sql
transform/dbt_catalyst/: package-lock.yml  packages.yml
transform/dbt_github/: dbt_project.yml  package-lock.yml  packages.yml
transform/dbt_shared/: dbt_project.yml
transform/dbt_tech_intel/: dbt_project.yml
transform/profiles/: profiles.yml.j2
(+43 files in other folders)
