[project]
name = "cardano-insights"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dlt[s3]>=1.15.0",
    "duckdb>=1.3.2",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "boto3>=1.34.0",
    "s3fs>=2024.10.0",
]
